# vastraas

./: .env.example  README.md  docker-compose.yml
ai-service/: .dockerignore  Dockerfile
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: llm.py  nodes.py
backend/app/api/: admin.py  connectors.py  submissions.py  tokens.py
backend/app/models/: tables.py
backend/app/schemas/: billing.py
backend/app/services/: cache.py  image_gen.py  image_tiers.py  runtime_config.py  storage.py  tokens.py
frontend/: Dockerfile  nginx.conf
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AuthShell.tsx  BarChart.tsx  ImageFeed.tsx  Navbar.tsx  PipelineDock.tsx  ProductModal.tsx  SkeletonImage.tsx
frontend/src/lib/: catalog.ts  pipelineDock.tsx
frontend/src/pages/: AdminDashboard.tsx  Landing.tsx  SellerDashboard.tsx
frontend/src/pages/sections/: AdminBusinesses.tsx  AdminGrowth.tsx  Catalog.tsx  Lookbooks.tsx  NewProduct.tsx  Overview.tsx  Tokens.tsx
