[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.5",
    "anthropic>=0.117.0",
    "boto3>=1.43.51",
    "email-validator>=2.3.0",
    "fastapi>=0.139.2",
    "google-auth>=2.55.2",
    "google-genai>=2.12.1",
    "httpx>=0.28.1",
    "langchain-aws>=1.6.2",
    "langchain-core>=1.4.9",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "openai>=2.46.0",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=12.3.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.51",
    "stripe>=15.3.1",
    "uvicorn[standard]>=0.51.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
